--- a/index.html
+++ b/index.html
@@ -79,19 +79,26 @@ body{
 }
 
 /* ---------- SERVICES ---------- */
-.services h2{
+.services h2,
+.location h2,
+.results h2,
+.thankyou h2{
   text-align:center;
   font-size:34px;
   margin-bottom:10px;
 }
 
-.services p{
+.services p,
+.location p,
+.results p,
+.thankyou p{
   text-align:center;
   color:#555;
   margin-bottom:30px;
 }
 
-.service-card{
+.service-card,
+.result-card{
   background:white;
   border-radius:18px;
   padding:22px;
@@ -107,18 +114,6 @@ body{
 }
 
 /* ---------- LOCATION ---------- */
-.location h2{
-  text-align:center;
-  font-size:34px;
-  margin-bottom:10px;
-}
-
-.location p{
-  text-align:center;
-  color:#555;
-  margin-bottom:30px;
-}
-
 .location-box{
   max-width:420px;
   margin:0 auto;
@@ -145,7 +140,9 @@ body{
   font-weight:bold;
 }
 
-.location-box button{
+.location-box button,
+.results button,
+.thankyou button{
   width:100%;
   padding:14px;
   font-size:16px;
@@ -180,27 +177,27 @@ body{
 
   <div class="service-card" onclick="goPage('page-location')">
     <div class="icon">📍</div>
-    <strong>Travel Spots</strong>
+    Travel Spots
   </div>
 
   <div class="service-card" onclick="goPage('page-location')">
     <div class="icon">🏨</div>
-    <strong>Hotels & Stays</strong>
+    Hotels & Stays
   </div>
 
   <div class="service-card" onclick="goPage('page-location')">
     <div class="icon">🛕</div>
-    <strong>Spiritual Places</strong>
+    Spiritual Places
   </div>
 
   <div class="service-card" onclick="goPage('page-location')">
     <div class="icon">🍽</div>
-    <strong>Restaurants</strong>
+    Restaurants
   </div>
 
   <div class="service-card" onclick="goPage('page-location')">
     <div class="icon">🛍</div>
-    <strong>Shopping Areas</strong>
+    Shopping Areas
   </div>
 </section>
 
@@ -218,8 +215,33 @@ body{
 
     <div class="radius" id="r">10 km</div>
 
-    <button>Find Places</button>
+    <button onclick="goPage('page-results')">Find Places</button>
   </div>
+</section>
+
+<!-- PAGE 4: RESULTS -->
+<section class="page results" id="page-results">
+  <h2>Best Places Near You</h2>
+  <p>Showing results based on your selection</p>
+
+  <div class="result-card">
+    <strong>Sample Place One</strong><br>
+    Short description of the place
+  </div>
+
+  <div class="result-card">
+    <strong>Sample Place Two</strong><br>
+    Short description of the place
+  </div>
+
+  <button onclick="goPage('page-thankyou')">Continue</button>
+</section>
+
+<!-- PAGE 5: THANK YOU -->
+<section class="page thankyou" id="page-thankyou">
+  <h2>Thank You for Using GaliGyan</h2>
+  <p>We hope you discovered something amazing today</p>
+  <button onclick="goPage('page-hero')">Back to Home</button>
 </section>
 
 <script>
