--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
 <title>GaliGyan</title>
 
 <style>
+:root{
+  --bg:#f6f3ec;
+  --card:#ffffff;
+  --text:#222;
+  --muted:#555;
+  --btn1:#6a11cb;
+  --btn2:#ff006e;
+}
+
+body.dark{
+  --bg:#121212;
+  --card:#1e1e1e;
+  --text:#f5f5f5;
+  --muted:#bbb;
+}
+
 *{
   margin:0;
   padding:0;
@@ -13,7 +29,21 @@
 }
 
 body{
-  background:#f6f3ec;
+  background:var(--bg);
+  color:var(--text);
+}
+
+/* ---------- THEME TOGGLE ---------- */
+.toggle{
+  position:fixed;
+  top:15px;
+  right:15px;
+  z-index:1000;
+  padding:10px 14px;
+  border-radius:20px;
+  background:var(--card);
+  cursor:pointer;
+  font-size:14px;
 }
 
 /* ---------- PAGE SYSTEM ---------- */
@@ -22,106 +52,60 @@ body{
   min-height:100vh;
   padding:40px 20px;
 }
-
-.page.active{
-  display:block;
-}
+.page.active{display:block}
 
 /* ---------- HERO ---------- */
 .hero{
-  position:relative;
   background-size:cover;
   background-position:center;
   display:flex;
   align-items:center;
   justify-content:center;
+  position:relative;
 }
-
 .hero::before{
   content:"";
   position:absolute;
   inset:0;
-  background:rgba(0,0,0,0.45);
+  background:rgba(0,0,0,.45);
 }
-
 .hero-content{
   position:relative;
   text-align:center;
-  color:white;
   max-width:720px;
+  color:white;
 }
-
-.hero h1{
-  font-size:42px;
-  margin-bottom:15px;
-}
-
-.hero p{
-  font-size:18px;
-  margin-bottom:25px;
-  line-height:1.5;
-}
-
+.hero h1{font-size:42px;margin-bottom:15px}
+.hero p{font-size:18px;margin-bottom:25px}
 .hero button{
   padding:14px 32px;
-  font-size:16px;
   border:none;
   border-radius:30px;
-  background:linear-gradient(90deg,#6a11cb,#ff006e);
+  background:linear-gradient(90deg,var(--btn1),var(--btn2));
   color:white;
   cursor:pointer;
 }
+.creator{margin-top:18px;font-size:13px;opacity:.85}
 
-.creator{
-  margin-top:20px;
-  font-size:13px;
-  opacity:0.85;
-}
-
-/* ---------- SERVICES ---------- */
-.services h2,
-.location h2,
-.results h2,
-.thankyou h2{
-  text-align:center;
-  font-size:34px;
-  margin-bottom:10px;
-}
-
-.services p,
-.location p,
-.results p,
-.thankyou p{
-  text-align:center;
-  color:#555;
-  margin-bottom:30px;
-}
-
-.service-card,
-.result-card{
-  background:white;
+/* ---------- CARDS ---------- */
+.card{
+  background:var(--card);
   border-radius:18px;
   padding:22px;
   margin:18px auto;
   max-width:420px;
-  box-shadow:0 10px 25px rgba(0,0,0,0.08);
+  box-shadow:0 10px 25px rgba(0,0,0,.08);
   cursor:pointer;
-}
-
-.icon{
-  font-size:26px;
-  margin-bottom:10px;
 }
 
 /* ---------- LOCATION ---------- */
 .location-box{
   max-width:420px;
   margin:0 auto;
-  background:white;
+  background:var(--card);
   padding:30px;
   border-radius:22px;
 }
-
 .location-box input{
   width:100%;
   padding:14px;
@@ -129,23 +113,11 @@ body{
   border:1px solid #ccc;
   margin-bottom:20px;
 }
-
-.range{
-  width:100%;
-}
-
-.radius{
-  text-align:center;
-  margin:10px 0 20px;
-  font-weight:bold;
-}
-
-.location-box button,
-.results button,
-.thankyou button{
+.range{width:100%}
+.radius{text-align:center;margin:10px 0 20px;font-weight:bold}
+button.full{
   width:100%;
   padding:14px;
-  font-size:16px;
   border:none;
   border-radius:30px;
   background:linear-gradient(90deg,#ff7a18,#ff006e);
@@ -157,115 +129,83 @@ body{
 
 <body>
 
-<!-- PAGE 1: HERO -->
-<section class="page hero active" id="page-hero">
+<div class="toggle" onclick="toggleTheme()">🌙 Theme</div>
+
+<!-- HERO -->
+<section class="page hero active" id="hero">
   <div class="hero-content">
     <h1>Discover Incredible India with GaliGyan</h1>
-    <p>
-      Your trusted guide to India’s best travel destinations,
-      hotels, spiritual places, food spots and shopping areas.
-    </p>
-    <button onclick="goPage('page-services')">Explore Now →</button>
+    <p>Your trusted guide to places, hotels, food & culture</p>
+    <button onclick="go('services')">Explore Now →</button>
     <div class="creator">Created by Aman Kumar Mishra</div>
   </div>
 </section>
 
-<!-- PAGE 2: SERVICES -->
-<section class="page services" id="page-services">
-  <h2>What Would You Like to Explore?</h2>
-  <p>Select a category to continue</p>
+<!-- SERVICES -->
+<section class="page" id="services">
+  <h2 align="center">What do you want to explore?</h2>
+  <p align="center" style="color:var(--muted)">Choose a category</p>
 
-  <div class="service-card" onclick="goPage('page-location')">
-    <div class="icon">📍</div>
-    Travel Spots
-  </div>
-
-  <div class="service-card" onclick="goPage('page-location')">
-    <div class="icon">🏨</div>
-    Hotels & Stays
-  </div>
-
-  <div class="service-card" onclick="goPage('page-location')">
-    <div class="icon">🛕</div>
-    Spiritual Places
-  </div>
-
-  <div class="service-card" onclick="goPage('page-location')">
-    <div class="icon">🍽</div>
-    Restaurants
-  </div>
-
-  <div class="service-card" onclick="goPage('page-location')">
-    <div class="icon">🛍</div>
-    Shopping Areas
-  </div>
+  <div class="card" onclick="go('location')">📍 Travel Spots</div>
+  <div class="card" onclick="go('location')">🏨 Hotels & Stays</div>
+  <div class="card" onclick="go('location')">🛕 Spiritual Places</div>
+  <div class="card" onclick="go('location')">🍽 Restaurants</div>
+  <div class="card" onclick="go('location')">🛍 Shopping Areas</div>
 </section>
 
-<!-- PAGE 3: LOCATION -->
-<section class="page location" id="page-location">
-  <h2>Where are you right now?</h2>
-  <p>Enter your location and select radius</p>
+<!-- LOCATION -->
+<section class="page" id="location">
+  <h2 align="center">Where are you?</h2>
+  <p align="center" style="color:var(--muted)">Enter location & radius</p>
 
   <div class="location-box">
     <input placeholder="Enter city or area">
-
-    <input type="range" min="1" max="100" value="10"
-      class="range"
-      oninput="document.getElementById('r').innerText=this.value+' km'">
-
+    <input type="range" min="1" max="100" value="10" class="range"
+      oninput="r.innerText=this.value+' km'">
     <div class="radius" id="r">10 km</div>
-
-    <button onclick="goPage('page-results')">Find Places</button>
+    <button class="full" onclick="go('results')">Find Places</button>
   </div>
 </section>
 
-<!-- PAGE 4: RESULTS -->
-<section class="page results" id="page-results">
-  <h2>Best Places Near You</h2>
-  <p>Showing results based on your selection</p>
-
-  <div class="result-card">
-    <strong>Sample Place One</strong><br>
-    Short description of the place
-  </div>
-
-  <div class="result-card">
-    <strong>Sample Place Two</strong><br>
-    Short description of the place
-  </div>
-
-  <button onclick="goPage('page-thankyou')">Continue</button>
+<!-- RESULTS -->
+<section class="page" id="results">
+  <h2 align="center">Best Places Near You</h2>
+  <div class="card">Sample Place One</div>
+  <div class="card">Sample Place Two</div>
+  <button class="full" onclick="go('thankyou')">Continue</button>
 </section>
 
-<!-- PAGE 5: THANK YOU -->
-<section class="page thankyou" id="page-thankyou">
-  <h2>Thank You for Using GaliGyan</h2>
-  <p>We hope you discovered something amazing today</p>
-  <button onclick="goPage('page-hero')">Back to Home</button>
+<!-- THANK YOU -->
+<section class="page" id="thankyou">
+  <h2 align="center">Thank You</h2>
+  <p align="center" style="color:var(--muted)">
+    Thanks for using GaliGyan
+  </p>
+  <button class="full" onclick="go('hero')">Back to Home</button>
 </section>
 
 <script>
-/* ---------- PAGE SWITCH ---------- */
-function goPage(id){
-  document.querySelectorAll(".page").forEach(p=>{
-    p.classList.remove("active");
-  });
-  document.getElementById(id).classList.add("active");
+function go(id){
+  document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
+  document.getElementById(id).classList.add('active');
 }
 
-/* ---------- HERO IMAGE ROTATION ---------- */
-const hero=document.getElementById("page-hero");
-const images=[
-  "https://images.unsplash.com/photo-1524492412937-b28074a5d7da",
-  "https://images.unsplash.com/photo-1548013146-72479768bada",
-  "https://images.unsplash.com/photo-1506466010722-395aa2bef877",
-  "https://images.unsplash.com/photo-1587474260584-136574528ed5"
+function toggleTheme(){
+  document.body.classList.toggle('dark');
+}
+
+/* Hero images */
+const hero=document.getElementById("hero");
+const imgs=[
+ "https://images.unsplash.com/photo-1524492412937-b28074a5d7da",
+ "https://images.unsplash.com/photo-1548013146-72479768bada",
+ "https://images.unsplash.com/photo-1506466010722-395aa2bef877"
 ];
 let i=0;
-hero.style.backgroundImage="url("+images[0]+")";
+hero.style.backgroundImage=url(${imgs[0]});
 setInterval(()=>{
-  i=(i+1)%images.length;
-  hero.style.backgroundImage="url("+images[i]+")";
+  i=(i+1)%imgs.length;
+  hero.style.backgroundImage=url(${imgs[i]});
 },4000);
 </script>
 
