--- a/index.html
+++ b/index.html
@@ -2,196 +2,162 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>GaliGyan</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Galigyan – Travel Guide</title>
 
 <style>
-:root{
-  --bg:#f6f3ec;
-  --card:#ffffff;
-  --text:#222;
-  --muted:#666;
-  --accent1:#6a11cb;
-  --accent2:#ff006e;
-}
-body.dark{
-  --bg:#121212;
-  --card:#1e1e1e;
-  --text:#f5f5f5;
-  --muted:#aaa;
-}
+*{box-sizing:border-box;margin:0;padding:0;font-family:Arial,Helvetica,sans-serif}
+body{background:#fff7e6;color:#222}
 
-*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
-body{background:var(--bg);color:var(--text);}
-
-/* page system */
-.page{display:none;min-height:100vh;padding:40px 20px;}
+.page{display:none;min-height:100vh;padding:30px}
 .page.active{display:block}
 
-/* hero */
-.hero{
-  background-size:cover;
-  background-position:center;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  position:relative;
-}
-.hero::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:rgba(0,0,0,.45);
-}
-.hero-content{
-  position:relative;
-  text-align:center;
-  color:white;
-  max-width:720px;
-}
-.hero h1{font-size:42px;margin-bottom:15px}
-.hero p{font-size:18px;margin-bottom:25px}
-.hero button{
-  padding:14px 32px;
+.center{display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center}
+
+button{
+  padding:14px 26px;
   border:none;
-  border-radius:30px;
-  background:linear-gradient(90deg,var(--accent1),var(--accent2));
+  border-radius:10px;
+  background:#2563eb;
   color:white;
+  font-size:16px;
   cursor:pointer;
 }
-.creator{margin-top:18px;font-size:13px;opacity:.85}
+button.secondary{background:#e5e7eb;color:#111}
 
-/* cards */
+.hero{
+  width:100%;
+  height:60vh;
+  background-size:cover;
+  background-position:center;
+  border-radius:20px;
+  margin-bottom:25px;
+  transition:background-image 1s ease-in-out;
+}
+
+.cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px;margin-top:30px}
 .card{
-  background:var(--card);
-  border-radius:18px;
-  padding:22px;
-  margin:18px auto;
-  max-width:420px;
+  background:white;
+  padding:20px;
+  border-radius:16px;
   box-shadow:0 10px 25px rgba(0,0,0,.08);
 }
 
-/* buttons */
-.full{
+input,select{
   width:100%;
-  padding:14px;
-  border:none;
-  border-radius:30px;
-  background:linear-gradient(90deg,#ff7a18,#ff006e);
-  color:white;
-  cursor:pointer;
+  padding:12px;
+  margin-top:10px;
+  border-radius:8px;
+  border:1px solid #ccc;
 }
 
-/* rating */
-.stars span{
+.rating span{
   font-size:28px;
   cursor:pointer;
-  color:#ccc;
 }
-.stars span.active{color:gold}
+.rating span.active{color:gold}
 </style>
 </head>
 
 <body>
 
-<!-- HERO -->
-<section class="page hero active" id="hero">
-  <div class="hero-content">
-    <h1>Discover Incredible India with GaliGyan</h1>
-    <p>Your trusted guide to places, hotels, food & culture</p>
-    <button onclick="go('services')">Explore More →</button>
-    <div class="creator">Created by Aman Kumar Mishra</div>
-  </div>
-</section>
+<!-- INTRO -->
+<div class="page active center" id="intro">
+  <div class="hero" id="hero"></div>
+  <h1>Galigyan</h1>
+  <p>Your guide to India’s best travel, hotels & spiritual places</p>
+  <p style="margin-top:8px;font-size:14px;">Created by Aman Kumar Mishra</p>
+  <br>
+  <button onclick="go('services')">Explore Now</button>
+</div>
 
 <!-- SERVICES -->
-<section class="page" id="services">
-  <h2 align="center">Choose a Category</h2>
-  <p align="center" style="color:var(--muted)">Mock demo (API coming later)</p>
-
-  <div class="card" onclick="go('location')">📍 Travel Spots</div>
-  <div class="card" onclick="go('location')">🛕 Spiritual Places</div>
-  <div class="card" onclick="go('location')">🍽 Restaurants</div>
-</section>
+<div class="page" id="services">
+  <h2>What would you like to explore?</h2>
+  <div class="cards">
+    <div class="card">🏛 Travel Spots</div>
+    <div class="card">🏨 Hotels & Stays</div>
+    <div class="card">🛕 Spiritual Places</div>
+    <div class="card">🛍 Shopping Areas</div>
+  </div>
+  <br>
+  <button onclick="go('location')">Continue</button>
+</div>
 
 <!-- LOCATION -->
-<section class="page" id="location">
-  <h2 align="center">Your Location</h2>
-  <p align="center" style="color:var(--muted)">Location input is demo only</p>
-
-  <div class="card">
-    <input placeholder="Enter any city (demo)"
-      style="width:100%;padding:12px;border-radius:10px;border:1px solid #ccc">
-    <br><br>
-    <button class="full" onclick="go('results')">Show Results</button>
-  </div>
-</section>
+<div class="page" id="location">
+  <h2>Select Location</h2>
+  <input placeholder="Enter city (e.g. Delhi)">
+  <br><br>
+  <button class="secondary">📍 Use GPS (demo)</button>
+  <br><br>
+  <label>Radius (km)</label>
+  <input type="range" min="1" max="100" value="10">
+  <br><br>
+  <button onclick="go('results')">Find Places</button>
+</div>
 
 <!-- RESULTS -->
-<section class="page" id="results">
-  <h2 align="center">Popular Places in India</h2>
-
-  <div class="card">
-    <strong>Taj Mahal – Agra</strong><br>
-    Mughal-era marble monument, UNESCO World Heritage Site.
+<div class="page" id="results">
+  <h2>Places Near You</h2>
+  <div class="cards">
+    <div class="card">
+      <b>Taj Mahal</b><br>Agra, Uttar Pradesh
+    </div>
+    <div class="card">
+      <b>Golden Temple</b><br>Amritsar, Punjab
+    </div>
+    <div class="card">
+      <b>Meenakshi Temple</b><br>Madurai, Tamil Nadu
+    </div>
   </div>
-
-  <div class="card">
-    <strong>Meenakshi Temple – Madurai</strong><br>
-    Ancient South Indian temple known for sculptures.
-  </div>
-
-  <div class="card">
-    <strong>Gateway of India – Mumbai</strong><br>
-    Iconic waterfront monument built during British rule.
-  </div>
-
-  <button class="full" onclick="go('thankyou')">Continue</button>
-</section>
+  <br>
+  <button onclick="go('thankyou')">Finish</button>
+</div>
 
 <!-- THANK YOU -->
-<section class="page" id="thankyou">
-  <h2 align="center">Thank You</h2>
-  <p align="center" style="color:var(--muted)">Rate your experience</p>
-
-  <div class="stars" align="center">
+<div class="page center" id="thankyou">
+  <h2>Thank You for Visiting Galigyan</h2>
+  <p>Rate your experience</p>
+  <div class="rating">
     <span onclick="rate(this)">★</span>
     <span onclick="rate(this)">★</span>
     <span onclick="rate(this)">★</span>
     <span onclick="rate(this)">★</span>
     <span onclick="rate(this)">★</span>
   </div>
-
   <br>
-  <button class="full" onclick="go('hero')">Back to Home</button>
-</section>
+  <button onclick="go('intro')">Go Home</button>
+</div>
 
 <script>
+/* page navigation */
 function go(id){
-  document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
+  document.querySelectorAll('.page').forEach(function(p){
+    p.classList.remove('active');
+  });
   document.getElementById(id).classList.add('active');
 }
 
-/* hero images */
-const hero=document.getElementById("hero");
-const imgs=[
- "https://images.unsplash.com/photo-1524492412937-b28074a5d7da",
- "https://images.unsplash.com/photo-1548013146-72479768bada",
- "https://images.unsplash.com/photo-1506466010722-395aa2bef877"
+/* hero image rotation */
+var hero=document.getElementById("hero");
+var imgs=[
+"https://images.unsplash.com/photo-1524492412937-b28074a5d7da",
+"https://images.unsplash.com/photo-1548013146-72479768bada",
+"https://images.unsplash.com/photo-1506466010722-395aa2bef877"
 ];
-let i=0;
-hero.style.backgroundImage=url(${imgs[0]});
-setInterval(()=>{
+var i=0;
+hero.style.backgroundImage="url("+imgs[0]+")";
+setInterval(function(){
   i=(i+1)%imgs.length;
-  hero.style.backgroundImage=url(${imgs[i]});
+  hero.style.backgroundImage="url("+imgs[i]+")";
 },4000);
 
 /* rating */
 function rate(el){
-  const stars=[...el.parentNode.children];
-  stars.forEach(s=>s.classList.remove("active"));
-  for(let i=0;i<=stars.indexOf(el);i++){
-    stars[i].classList.add("active");
-  }
+  var stars=document.querySelectorAll('.rating span');
+  stars.forEach(function(s){s.classList.remove('active')});
+  el.classList.add('active');
 }
 </script>
 
